Added more mandatory methods to the backend. Removed unneccessary method declarations in interface of TimingService
